# OptiMates

./: .cruft.json  .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: black.yaml  docs.yaml  mypy.yaml
CellTracking/: Data_exploration.ipynb
scripts/: to_zarr.py  train_celegans_dataset.py  train_hela_dataset.py  train_par_haw.py  validate_par_haw.py
src/OptiMates/: __init__.py  run_cellpose.py  run_motile_on_celegans.ipynb  run_motile_on_parhaw.ipynb  train_on_celegans.ipynb  unet.py  utils.py
src/OptiMates/predict_lineajea/: predict_on_celegans.py
src/OptiMates/train_linajea/: checkpoint_training.py  train.py
